# qr_code_cli

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
