[project]
name = "qr-create"
version = "0.1.0"
description = "CLI tool for generating QR codes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qrcode>=8.0",
    "pillow>=11.0.0",
]

[project.scripts]
qr_create = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]
